--- a/style.css
+++ b/style.css
@@ -21,6 +21,30 @@ header {
 
 .sidebar {
     grid-row: 1 / -1;
+
+    background-color: rgb(0, 150, 255);
+    color: white;
+}
+
+.sidebar h1 {
+    padding-left: 40px;
+}
+
+.sidebar ul {
+    list-style: none;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.sidebar li {
+    margin-bottom: 15px;
+}
+
+.sidebar a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.1rem;
 }
 
 main {
