--- a/style.css
+++ b/style.css
@@ -23,18 +23,26 @@ header {
     grid-row: 1 / -1;
 
     background-color: rgb(0, 150, 255);
-    color: white;
 }
 
 .sidebar h1 {
+    color: white;
     padding-left: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.sidebar h1 svg {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
 }
 
 .sidebar ul {
     list-style: none;
     margin-top: 40px;
     margin-bottom: 40px;
-    padding-left: 20px;
+    padding-left: 30px;
 }
 
 .sidebar li {
@@ -46,6 +54,14 @@ header {
     text-decoration: none;
     font-weight: bold;
     font-size: 1.1rem;
+    display: flex;
+    align-items: center;
+}
+
+.sidebar a svg {
+    width: 20px;
+    height: 20px;
+    margin-right: 20px;
 }
 
 main {
