--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 4fr;
     height: 100vh;
+    font-family: 'Roboto', sans-serif;;
 }
 
 header {
