Change main section background color

--- a/style.css
+++ b/style.css
@@ -71,6 +71,8 @@ main {
     display: grid;
     grid-template-columns: 5fr 2fr;
     grid-template-rows: 1fr 1fr;
+
+    background-color: #f1f5f9;
 }
 
 .projects {
