--- a/style.css
+++ b/style.css
@@ -13,11 +13,18 @@ header {
 .header-top,
 .header-bottom {
     display: flex;
+    align-items: center;
 }
 
 .header-top .user,
 .header-bottom .user {
     display: flex;
+    align-items: center;
+}
+
+header svg {
+    width: 20px;
+    height: 20px;
 }
 
 .sidebar {
