--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 4fr;
+
     height: 100vh;
     font-family: 'Roboto', sans-serif;;
 }
@@ -9,6 +10,9 @@ body {
 /* HEADER */
 header {
     grid-column: 2 / -1;
+
+    z-index: 100;
+    box-shadow: 0px 3px 3px rgba(0,0,0,0.3); 
 }
 
 .header-top,
