--- a/style.css
+++ b/style.css
@@ -176,6 +176,8 @@ main {
 
 .projects {
     grid-row: 1 / -1;
+
+    padding-right: 20px;
 }
 
 .projects-container {
@@ -200,11 +202,18 @@ main {
 .projects .project .description {
     margin-top: 0;
     font-size: .8rem;
+    color: darkslategrey;
+}
+
+.projects .project .buttons {
+    text-align: right;
+    margin-top: 30px;
 }
 
 .projects svg {
     width: 20px;
     height: 20px;
+    margin: 0 10px;
 }
 
 .trending .trend {
