--- a/style.css
+++ b/style.css
@@ -174,6 +174,11 @@ main {
     padding: 20px;
 }
 
+main h1 {
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
 .projects {
     grid-row: 1 / -1;
 
