--- a/style.css
+++ b/style.css
@@ -265,6 +265,17 @@ main h1 {
     font-size: .8rem;
 }
 
+.trend:last-child {
+    margin-bottom: 0;
+}
+
+.trend img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+
 .trend .user {
     margin: 0;
 }
