--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ main h1 {
     border-left: 10px solid orange;
     border-radius: 10px;
     padding: 20px;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.3); 
 }
 
 .projects .project .name {
